--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,25 @@ node_modules
 
 # Users Environment Variables
 .lock-wscript
+
+.idea/.name
+
+.idea/compiler.xml
+
+.idea/copyright/profiles_settings.xml
+
+.idea/encodings.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/neomor.github.io.iml
+
+.idea/scopes/scope_settings.xml
+
+.idea/uiDesigner.xml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
